[gd_scene load_steps=7 format=3 uid="uid://b03fjsr5evycm"]

[ext_resource type="Script" uid="uid://cvgxutam31s0r" path="res://Scripts/Enemy/Enemy A/blueEnemyA.gd" id="1_ccy4d"]
[ext_resource type="Texture2D" uid="uid://3046jo7ott8l" path="res://Assets/Sprites/kenney_space-shooter-redux/PNG/Ships/playerShip3_blue.png" id="2_1ieay"]
[ext_resource type="Texture2D" uid="uid://njepx503ji5x" path="res://Assets/Sprites/kenney_space-shooter-redux/PNG/Lasers/laserBlue01.png" id="4_ni2l0"]

[sub_resource type="Animation" id="Animation_tptno"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_4t3h7"]
resource_name = "muzzleflash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t0sli"]
_data = {
&"RESET": SubResource("Animation_tptno"),
&"muzzleflash": SubResource("Animation_4t3h7")
}

[node name="BlueEnemyA" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 16
collision_mask = 2
motion_mode = 1
script = ExtResource("1_ccy4d")

[node name="BlueSprite" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 3.14159
texture = ExtResource("2_1ieay")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-9, 0)
rotation = -3.14159
polygon = PackedVector2Array(37, 26, -9.00001, -36, -56, 27)

[node name="Muzzle1" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1, 43)
scale = Vector2(2.36, 1)
texture = ExtResource("4_ni2l0")
region_enabled = true
region_rect = Rect2(0, 0, 9, 13.6122)

[node name="MuzzleFlash" type="AnimationPlayer" parent="."]
root_node = NodePath("../Muzzle1")
libraries = {
"": SubResource("AnimationLibrary_t0sli")
}

[node name="SpawnPos" type="Marker2D" parent="."]
position = Vector2(0, -37)

[node name="FireSpeed" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1, -11)
scale = Vector2(8, 6.57499)
rect = Rect2(-10, -10, 20, 21.85)

[node name="Collision" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collision"]
position = Vector2(-9, 0)
rotation = -3.14159
polygon = PackedVector2Array(37, 26, -9.00001, -36, -56, 27)

[connection signal="timeout" from="FireSpeed" to="." method="_on_fire_speed_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
[connection signal="body_entered" from="Collision" to="." method="_on_collision_body_entered"]
